<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Options">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/beige"
        android:gravity="center"
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/parametresTitreText"
        android:textColor="@color/rouge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/titre"
        tools:layout_editor_absoluteX="0dp"
        >

        <Switch
            android:id="@+id/switchdarkmode"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginBottom="30dp"
            android:checked="false"
            android:showText="false"
            android:splitTrack="false"
            android:text="@string/dark_modeSwitchText"
            android:textColor="@color/rouge"
            android:theme="@style/ThemeOverlay.SwitchOptions"
            tools:checked="false"
            tools:ignore="UseSwitchCompatOrMaterialXml">

        </Switch>

        <Switch
            android:id="@+id/switchbigtext"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/make_text_biggerSwitchText"
            android:textColor="@color/rouge"
            android:theme="@style/ThemeOverlay.SwitchOptions"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Spinner
            android:id="@+id/spinnerLangues"
            android:layout_width="200dp"
            android:layout_marginBottom="30dp"
            android:layout_height="20dp"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/remove_personnal_recipesBoutonText"
            android:id="@+id/button7"
            android:background="@color/rouge"
            />


    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>